# smart-tech-pdv

./: .env.example  .env.release.example  .gitignore  AGENTS.md  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release-desktop.yml
docs/: CODEX_MASTER_RULES.md  COMO_USAR_NO_CODEX.md  NEXT_MEGA_BATCH.md  PROJECT_STATUS.md  README-build-release.md  README-structure.md  README-updater.md
keys/: smart-tech-updater.key  smart-tech-updater.key.pub
public/: site.webmanifest
release-notes/: v2.0.1.md  v2.0.10.md  v2.0.2.md  v2.0.3.md  v2.0.4.md  v2.0.5.md  v2.0.6.md  v2.0.7.md  v2.0.8.md  v2.0.9.md  v2.2.10.md  v2.2.14.md  v2.2.15.md
scripts/: bump-app-version.mjs  check-release-readiness.mjs  check-release.mjs  check-updater.mjs  generate-release-notes.mjs  load-release-env.ps1  release-desktop.mjs  release-github.mjs  release-github.ps1  tauri-build-signed.ps1  update-brand-assets.ps1
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql  0002_seed_demo.sql  0003_sync_license_audit.sql  0004_fashion_sectors.sql  0004_fashion_segments.sql  0004_offline_defaults.sql  0005_catalogo_moda_consistente.sql  0006_product_image_upload.sql  0007_customer_supplier_status.sql  0008_purchase_item_size.sql
src-tauri/src/: main.rs
src/app/: app.tsx  runtime-bootstrap.tsx
(+159 files in other folders)
